--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Devices</h1>
+<h1>Devices</h1>
 
-<table>
+<table border="1">
   <thead>
     <tr>
       <th>Imei</th>
