--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -1,8 +1,34 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Devices</h1>
+<!-- <h1>Devices</h1> -->
 
-<table border="1">
+<h1>nRF Transceiver Monitoring</h1>
+
+<p>
+  Download :
+  <%= link_to "CSV Format", devices_path(format: "csv") %> |
+  <%= link_to "Excel Format", devices_path(format: "xls") %>
+</p>
+
+
+<!--<% @devices.each do |device| %>
+  <% (@uniq_imei ||= []) << device.imei %>
+<% end %>
+
+<% @uniq_imei.inspect %> <br>
+
+<% @uniq_imei = @uniq_imei.uniq %>
+
+<select name="Devicelist" form="Deviceform">
+  <% @uniq_imei.each do |imei| %>
+    <option value="imei"><%= imei %></option>
+  <% end %>
+</select>
+
+<br>
+<br>-->
+
+<!-- <table border="1">
   <thead>
     <tr>
       <th>Imei</th>
@@ -24,6 +50,15 @@
   </tbody>
 </table>
 
-<br>
+<br> -->
 
-<%= link_to 'New Device', new_device_path %>
+<!-- <%= link_to 'New Device', new_device_path %> -->
+
+<html>
+<head>
+  <title></title>
+</head>
+<body>
+
+</body>
+</html>
