--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -1,64 +1,41 @@
-<p id="notice"><%= notice %></p>
 
-<!-- <h1>Devices</h1> -->
-
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
+  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <title>Pishrun Energy | Transceiver</title>
+</head>
 <h1>nRF Transceiver Monitoring</h1>
 
-<p>
-  Download :
-  <%= link_to "CSV Format", devices_path(format: "csv") %> |
-  <%= link_to "Excel Format", devices_path(format: "xls") %>
-</p>
-
-
-<!--<% @devices.each do |device| %>
-  <% (@uniq_imei ||= []) << device.imei %>
-<% end %>
-
-<% @uniq_imei.inspect %> <br>
-
-<% @uniq_imei = @uniq_imei.uniq %>
-
-<select name="Devicelist" form="Deviceform">
-  <% @uniq_imei.each do |imei| %>
-    <option value="imei"><%= imei %></option>
-  <% end %>
-</select>
-
-<br>
-<br>-->
-
-<!-- <table border="1">
-  <thead>
-    <tr>
-      <th>Imei</th>
-      <th>Packege</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @devices.each do |device| %>
-      <tr>
-        <td><%= device.imei %></td>
-        <td><%= device.packege %></td>
-        <td><%= link_to 'Show', device %></td>
-        <td><%= link_to 'Edit', edit_device_path(device) %></td>
-        <td><%= link_to 'Destroy', device, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br> -->
-
-<!-- <%= link_to 'New Device', new_device_path %> -->
-
-<html>
-<head>
-  <title></title>
-</head>
 <body>
+
+  <% @devices_all.each do |device| %>
+  <% (@uniq_imei ||= []) << device.imei %>
+  <% end %>
+
+  <% @uniq_imei.inspect %> <br>
+
+  <% @uniq_imei = @uniq_imei.uniq %>
+
+  <% @uniq_imei.each do |imei| %>
+  <%= link_to "Select IMEI ( #{imei} )", devices_path(:format => "xls", :selected_imei => imei)%> <br>
+  <% end %>
+
+<!--   <%= dt = Time.now%>  <br>
+  <%= dt.to_time.to_i %>  <br>
+
+  <%= Date.civil(Time.now.year, Time.now.month, Time.now.day).to_parsi %>  <br>
+  
+
+  <%= d = Date.civil(2012, 10, 30).to_parsi %>  <br>
+  <%= d.to_gregorian %>  <br> -->
+
+ 
+ 
 
 </body>
 </html>
+
+
+
