--- a/app/views/devices/index.xls.erb
+++ b/app/views/devices/index.xls.erb
@@ -5,7 +5,7 @@ xmlns:x="urn:schemas-microsoft-com:office:excel"
 xmlns:ss="urn:schemas-microsoft-com:office:spreadsheet"
 xmlns:html="http://www.w3.org/TR/REC-html40">
 
-<Worksheet ss:Name="Sheet1">
+<Worksheet ss:Name="<%= @selected_imei %>">
   <Table>
     <Row>
       <Cell><Data ss:Type="String">ID</Data></Cell>
